# xo-api

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
prisma/: schema.prisma
prisma/migrations/20230819205455_add_user_data/: migration.sql
prisma/migrations/20230820094521_add_games_schema/: migration.sql
src/: db_client.py  main.py  settings.py
src/auth/: jwt.py
src/models/: auth_models.py  game_models.py
src/routes/: auth.py  game.py  user.py
src/services/: auth_service.py  game_service.py  user_service.py
